Migrated auto-logout to Twig. Added slugs to all module methods that call templates

--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -556,7 +556,7 @@
 	margin-top: 1em;
 }
 
-#startupapi-usernamepass-edit-verify-email {
+#startupapi-usernamepass-edit-verify-email, #startupapi-email-edit-verify-email {
 	font-size: small;
 	display: block;
 }
