--- a/themes/classic/templates/modules/usernamepass/edit_user_form.html.twig
+++ b/themes/classic/templates/modules/usernamepass/edit_user_form.html.twig
@@ -4,17 +4,17 @@
 		<div class="control-group{% if 'username' in errors|keys %} error" title="{{ errors['username']|join("\n")}}{% endif %}">
 			<label class="control-label" for="startupapi-{{slug}}-edit-username">Username</label>
 			<div class="controls">
-				{% if current_user.username %}
-					<input disabled="disabled" class="input" type="text" title="Sorry, you can't change your username" value="{{current_user.username}}"/>
+				{% if AUTH.current_user.username %}
+					<input disabled="disabled" class="input" type="text" title="Sorry, you can't change your username" value="{{AUTH.current_user.username}}"/>
 				{% else %}
-					<input id="username" name="startupapi-{{slug}}-edit-username" type="text" required="true" value="{% if 'username' in data|keys %}{{ data.username }}{% else %}{{current_user.username}}{% endif %}"/>
+					<input id="username" name="startupapi-{{slug}}-edit-username" type="text" required="true" value="{% if 'username' in data|keys %}{{ data.username }}{% else %}{{AUTH.current_user.username}}{% endif %}"/>
 				{% endif %}
 			</div>
 		</div>
 
 		<legend>Change password</legend>
 
-		{% if current_user.username %}
+		{% if AUTH.current_user.username %}
 			<div class="control-group{% if 'currentpass' in errors|keys %} error" title="{{ errors['currentpass']|join("\n")}}{% endif %}">
 				<label class="control-label" for="startupapi-{{slug}}-edit-currentpass">Current password</label>
 				<div class="controls">
@@ -24,7 +24,7 @@
 		{% endif %}
 		<div class="control-group{% if 'pass' in errors|keys %} error" title="{{ errors['pass']|join("\n")}}{% endif %}">
 			<label class="control-label" for="startupapi-{{slug}}-edit-pass">
-				{% if current_user.username %}
+				{% if AUTH.current_user.username %}
 				Set a
 				{% else %}
 				New
