--- a/themes/classic/templates/page.html.twig
+++ b/themes/classic/templates/page.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<title>Users</title>
+	<title>{% block title %}Users - {{UserConfig.appName}}{% endblock %}</title>
 	{% include 'head_tag.html.twig' %}
 </head>
 
