--- a/themes/awesome/templates/page_with_sidebar.html.twig
+++ b/themes/awesome/templates/page_with_sidebar.html.twig
@@ -3,7 +3,7 @@
 {% block base %}
 <div class="container-fluid">
 	<div class="row">
-        <div class="col-sm-3 col-md-2">
+        <div class="col-sm-3 col-md-2 well sidebar">
 			<ul class="nav nav-pills nav-stacked">
 				<li class="nav-header">Profile</li>
 				<li{% if PAGE.SECTION == 'profile_info'%} class="active"{% endif %}>
