Fixed messages. Added invitations UI to Awesome! theme.

--- a/themes/awesome/startupapi.css
+++ b/themes/awesome/startupapi.css
@@ -27,3 +27,8 @@ footer.startupapi-footer {
 .nav-stacked > .nav-header {
 	font-weight: bold;
 }
+
+#startupapi-message {
+	display: none;
+	margin-top: 1em;
+}
