--- a/themes/awesome/templates/page.html.twig
+++ b/themes/awesome/templates/page.html.twig
@@ -10,8 +10,8 @@
 <!-- header ends -->
 
 {% block base %}
-	<div id="startupapi-message" class="hide">
-		<div class="alert alert-block hide">
+	<div id="startupapi-message" style="display: none">
+		<div class="alert alert-block">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			<div id="startupapi-message_copy"></div>
 		</div>
