--- a/themes/awesome/templates/page.html.twig
+++ b/themes/awesome/templates/page.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 
 <!-- footer starts -->
-<footer class="footer startupapi-footer panel-footer">
+<footer class="footer panel-footer">
 	<div class="container">
 		<div class="pull-right">
 			<a href="http://www.startupapi.com/" target="_blank">
