--- a/themes/classic/templates/error_messages.html.twig
+++ b/themes/classic/templates/error_messages.html.twig
@@ -17,3 +17,22 @@
 		</div>
 		{% endif %}
 {% endmacro %}
+{% macro showModuleErrors(id, errors) %}
+	{% if id in errors|keys and errors|length > 0 %}
+		<div class="alert alert-block alert-error fade-in">
+			<h4 style="margin-bottom: 0.5em">Snap!</h4>
+
+			<ul>
+				{% for field, errorset in errors %}
+					{% for error in errorset %}
+						<li>
+							<label  style="cursor: pointer" for="startupapi-{{id}}-edit-{{field}}">
+								{{error}}
+							</label>
+						</li>
+					{% endfor %}
+				{% endfor %}
+			</ul>
+		</div>
+		{% endif %}
+{% endmacro %}
