--- a/themes/classic/templates/modules/usernamepass/passwordreset.html.twig
+++ b/themes/classic/templates/modules/usernamepass/passwordreset.html.twig
@@ -14,15 +14,15 @@
 						<li>
 							<label>New password</label>
 							<input name="pass" type="password" size="25" autocomplete="off"/>
-							{% if errors.passwordreset.pass %}
-							<span class="startup-api-error-message" title="{{errors.passwordreset.pass}}">*</span>
+							{% if errors.pass %}
+							<span class="startup-api-error-message" title="{{errors.pass|join("\n")}}">*</span>
 							{% endif %}
 						</li>
 						<li>
 							<label>Repeat new password</label>
 							<input name="repeatpass" type="password" size="25" autocomplete="off"/>
-							{% if errors.passwordreset.repeatpass %}
-							<span class="startup-api-error-message" title="{{errors.passwordreset.repeatpass}}">*</span>
+							{% if errors.repeatpass %}
+							<span class="startup-api-error-message" title="{{errors.repeatpass|join("\n")}}">*</span>
 							{% endif %}
 						</li>
 						<li>
