--- a/themes/awesome/templates/login.html.twig
+++ b/themes/awesome/templates/login.html.twig
@@ -1,22 +1,20 @@
 {% extends 'page.html.twig' %}
 
 {% block content %}
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span12">
-				<h2>Log in</h2>
-				{% for module in UserConfig.authentication_modules %}
-					<div style="margin-bottom: 2em">
-						<h3 name="{{ module.id }}">{{ module.title }}</h3>
-						{% if login_failed[module.id] %}
-							<div class="alert alert-error">Login failed</div>
-						{% endif %}
-						<div style="margin-bottom: 2em">
-							{{ module_forms[module.id]|raw }}
-						</div>
-					</div>
-				{% endfor %}
+<div class="container-fluid">
+	<div class="page-header">
+		<h1>Log in</h1>
+	</div>
+		{% for module in UserConfig.authentication_modules %}
+		<div style="margin-bottom: 2em">
+			<h3 name="{{ module.id }}">{{ module.title }}</h3>
+			{% if login_failed[module.id] %}
+				<div class="alert alert-error">Login failed</div>
+			{% endif %}
+			<div style="margin-bottom: 2em">
+				{{ module_forms[module.id]|raw }}
 			</div>
 		</div>
-	</div>
+	{% endfor %}
+</div>
 {% endblock %}
