--- a/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
+++ b/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
@@ -7,27 +7,27 @@
 
 <form class="form-horizontal" action="{{action}}" method="POST"role="form">
 	<div class="form-group{% if 'username' in errors|keys %} has-error" title="{{ errors['username']|join("\n")}}{% endif %}">
-		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-edit-username">Username</label>
+		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-username">Username</label>
 		<div class="col-sm-7 col-md-6 col-lg-4">
 			{% if AUTH.current_user.username %}
 				<input class="form-control" readonly type="text" title="Sorry, you can't change your username" value="{{AUTH.current_user.username}}"/>
 			{% else %}
-				<input class="form-control" id="startupapi-{{slug}}-edit-username" name="username" type="text" required="true" value="{% if 'username' in data|keys %}{{ data.username }}{% else %}{{AUTH.current_user.username}}{% endif %}"/>
+				<input class="form-control" id="startupapi-{{slug}}-username" name="username" type="text" required="true" value="{% if 'username' in data|keys %}{{ data.username }}{% else %}{{AUTH.current_user.username}}{% endif %}"/>
 			{% endif %}
 		</div>
 	</div>
 
 	{% if AUTH.current_user.username %}
 		<div class="form-group{% if 'currentpass' in errors|keys %} has-error" title="{{ errors['currentpass']|join("\n")}}{% endif %}">
-			<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-edit-currentpass">Current password</label>
+			<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-currentpass">Current password</label>
 			<div class="col-sm-7 col-md-6 col-lg-4">
-				<input class="form-control" id="startupapi-{{slug}}-edit-currentpass" name="currentpass" type="password" autocomplete="off"/>
+				<input class="form-control" required id="startupapi-{{slug}}-currentpass" name="currentpass" type="password" autocomplete="off"/>
 			</div>
 		</div>
 	{% endif %}
 
 	<div class="form-group{% if 'pass' in errors|keys %} has-error" title="{{ errors['pass']|join("\n")}}{% endif %}">
-		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-edit-pass">
+		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-pass">
 			{% if AUTH.current_user.username %}
 			New
 			{% else %}
@@ -36,14 +36,14 @@
 			password
 		</label>
 		<div class="col-sm-7 col-md-6 col-lg-4">
-			<input class="form-control" id="startupapi-{{slug}}-edit-pass" name="pass" type="password" autocomplete="off"/>
+			<input class="form-control"{% if AUTH.current_user.username %} required{%endif%} id="startupapi-{{slug}}-pass" name="pass" type="password" autocomplete="off"/>
 		</div>
 	</div>
 
 	<div class="form-group{% if 'repeatpass' in errors|keys %} has-error" title="{{ errors['repeatpass']|join("\n")}}{% endif %}">
-		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-edit-repeatpass">Repeat new password</label>
+		<label class="col-sm-4 col-md-3 control-label" for="startupapi-{{slug}}-repeatpass">Repeat new password</label>
 		<div class="col-sm-7 col-md-6 col-lg-4">
-			<input class="form-control" id="startupapi-{{slug}}-edit-repeatpass" name="repeatpass" type="password" autocomplete="off"/>
+			<input class="form-control"{% if AUTH.current_user.username %} required{%endif%} id="startupapi-{{slug}}-repeatpass" name="repeatpass" type="password" autocomplete="off"/>
 		</div>
 	</div>
 
