--- a/themes/awesome/templates/modules/email/login.html.twig
+++ b/themes/awesome/templates/modules/email/login.html.twig
@@ -8,7 +8,7 @@
 			<h1>Log in</h1>
 		</div>
 
-		<p>Confirmation code was sent to {{email|default('your email address')}} please enter it below and click login button.</p>
+		<p>Confirmation code was sent to <b>{{email|default('your email address')}}</b> please enter it below and click login button.</p>
 
 		{{ ERR.showErrors('emaillogin', errors) }}
 
