--- a/themes/awesome/templates/modules/email/login_form.html.twig
+++ b/themes/awesome/templates/modules/email/login_form.html.twig
@@ -3,7 +3,7 @@
 		<legend>Enter your email address to re-send login link</legend>
 
 		<div class="form-group">
-			<input class="form-control" id="startupapi-{{slug}}-email" name="email" type="email" placeholder="john@example.com"/>
+			<input class="form-control" id="startupapi-{{slug}}-email" required name="email" type="email" placeholder="john@example.com"/>
 		</div>
 
 		<div class="form-group">
