--- a/themes/classic/templates/modules/usernamepass/registration_form.html.twig
+++ b/themes/classic/templates/modules/usernamepass/registration_form.html.twig
@@ -37,9 +37,9 @@
 			</div>
 		</div>
 
-		{% if TOSlinks %}
+		{% if PAGE.TOSlinks %}
 		<div style="margin-bottom: 0" class="control-group">
-			<div class="controls">{{TOSlinks}}</div>
+			<div class="controls">{{PAGE.TOSlinks|raw}}</div>
 		</div>
 		{% endif %}
 
