Fixed usernamepass form so it can be submitted generally regardless of the button pressed.

--- a/themes/awesome/templates/modules/usernamepass/login_form.html.twig
+++ b/themes/awesome/templates/modules/usernamepass/login_form.html.twig
@@ -29,7 +29,8 @@
 
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-md-offset-1 col-sm-7 col-md-6 col-lg-4">
-			<button class="btn btn-primary" type="submit" name="login">Login</button>
+			<input type="hidden" name="login">
+			<button class="btn btn-primary" type="submit">Login</button>
 			{% if UserConfig.enableRegistration %}
 				<a class="btn btn-default" href="{{UserConfig.USERSROOTURL}}/register.php">or sign up here</a>
 			{% endif %}
