Removed showModuleErrors unifying error showing, added ERR.group to simplify message-field connections.

--- a/themes/awesome/templates/account/edit_account.html.twig
+++ b/themes/awesome/templates/account/edit_account.html.twig
@@ -12,7 +12,7 @@
 
 	<form class="form" action="" method="POST">
 		<div class="row">
-			<div class="form-group col-sm-8 col-md-6 col-lg-4">
+			<div class="form-group col-sm-8 col-md-6 col-lg-4{{ ERR.group('edit-account', 'name', errors) }}">
 				<label class="control-label" for="startupapi-admin-account-edit-name">Account Name</label>
 
 				<input class="form-control"
