--- a/themes/awesome/templates/modules/usernamepass/passwordreset.html.twig
+++ b/themes/awesome/templates/modules/usernamepass/passwordreset.html.twig
@@ -8,20 +8,20 @@
 			<h1>Password reset</h1>
 		</div>
 
-		{{ ERR.showModuleErrors(slug, errors) }}
+		{{ ERR.showErrors(slug, errors) }}
 
 		<form class="form-horizontal" id="startupapi-passwordreset-form" action="" method="POST">
-			<p>Please enter new password</p>
-			<div class="form-group{% if 'pass' in errors|keys %} has-error" title="{{ errors['pass']|join("\n")}}{% endif %}">
+			<p>Please update your password</p>
+			<div class="form-group{{ ERR.group(slug, 'pass', errors) }}">
 				<label class="col-sm-3 col-md-3 col-lg-2 control-label"  for="startupapi-{{slug}}-pass">New password</label>
 				<div class="col-sm-7 col-md-6 col-lg-4">
-					<input class="form-control" id="startupapi-{{slug}}-pass"name="pass" type="password" size="25" autocomplete="off"/>
+					<input class="form-control" required id="startupapi-{{slug}}-pass"name="pass" type="password" size="25" autocomplete="off"/>
 				</div>
 			</div>
-			<div class="form-group{% if 'repeatpass' in errors|keys %} has-error" title="{{ errors['repeatpass']|join("\n")}}{% endif %}">
+			<div class="form-group{{ ERR.group(slug, 'repeatpass', errors) }}">
 				<label class="col-sm-3 col-md-3 col-lg-2 control-label"  for="startupapi-{{slug}}-repeatpass">Repeat new password</label>
 				<div class="col-sm-7 col-md-6 col-lg-4">
-					<input class="form-control" id="startupapi-{{slug}}-repeatpass" name="repeatpass" type="password" size="25" autocomplete="off"/>
+					<input class="form-control" required id="startupapi-{{slug}}-repeatpass" name="repeatpass" type="password" size="25" autocomplete="off"/>
 				</div>
 			</div>
 			<div class="form-group">
