--- a/themes/awesome/templates/send_email_verification_code.html.twig
+++ b/themes/awesome/templates/send_email_verification_code.html.twig
@@ -7,7 +7,7 @@
 				<div class="page-header">
 					<h1>Verification code sent</h1>
 				</div>
-				<p>Verification code was sent to <span class="startupapi-email-to-verify">{{email}}</span></p>
+				<p>Verification code was sent to <b>{{email}}</b></p>
 				<p><a class="btn btn-primary" href="{{UserConfig.USERSROOTURL}}/verify_email.php">Click here when you receive it</a></p>
 			{% else %}
 				<div class="page-header">
