--- a/themes/awesome/templates/edit.html.twig
+++ b/themes/awesome/templates/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'page_with_sidebar.html.twig' %}
-{% block content %}
+{% import 'error_messages.html.twig' as ERR %}
 
+{% block content %}
 {% if not current_module %}
 	<div class="page-header">
 		<h1>Profile Information</h1>
@@ -9,7 +10,7 @@
 	{{ ERR.showErrors('profile-info', errors) }}
 
 	<form class="form-horizontal" role="form" action="" method="POST">
-		<div class="form-group{% if 'name' in errors['profile-info']|keys %} has-error" title="{{ errors['profile-info']['name']|join("\n")}}{% endif %}">
+		<div class="form-group{{ ERR.group('profile-info', 'name', errors) }}">
 			<label class="col-sm-1 control-label" for="startupapi-profile-info-name">Name</label>
 			<div class="col-sm-8 col-md-7 col-lg-5">
 				<input id="startupapi-profile-info-name" class="form-control" name="name" type="text" value="{% if 'name' in data|keys %}{{ data.name }}{% else %}{{AUTH.current_user.name}}{% endif %}"/>
@@ -17,10 +18,7 @@
 		</div>
 
 		<div class="form-group
-			 has-feedback{% if 'email' in errors['profile-info']|keys %}
-			 has-error"
-			 title="{{ errors['profile-info']['email']|join("\n")}}{% endif %}
-			">
+			 has-feedback{{ ERR.group('profile-info', 'email', errors) }}">
 			<label class="col-sm-1 control-label" for="startupapi-profile-info-email">Email</label>
 			<div class="col-sm-8 col-md-7 col-lg-5">
 				<input id="startupapi-profile-info-email" class="form-control" name="email" type="email" placeholder="john@example.com" value="{% if 'email' in data|keys %}{{ data.email }}{% else %}{{AUTH.current_user.email}}{% endif %}"/>
