--- a/themes/awesome/templates/modules/email/login.html.twig
+++ b/themes/awesome/templates/modules/email/login.html.twig
@@ -16,14 +16,14 @@
 			<fieldset>
 				<legend>Enter confirmation code to login</legend>
 
-				<div class="form-group{% if errors['emaillogin']['email'] %} has-error" title="{{errors['emaillogin']['email']|join('\n')}}{% endif %}">
+				<div class="form-group{{ ERR.group('emaillogin', 'email', errors) }}">
 					<label class="col-sm-1 control-label" for="startupapi-{{slug}}-email">Email</label>
 					<div class="col-sm-8 col-md-7 col-lg-5">
 						<input class="form-control" id="startupapi-{{slug}}-email" name="email" type="email" placeholder="john@example.com"{% if email %} value="{{email}}"{% endif %}/>
 					</div>
 				</div>
 
-				<div class="form-group{% if errors['emaillogin']['code'] %} has-error" title="{{errors['emaillogin']['code']|join('\n')}}{% endif %}">
+				<div class="form-group{{ ERR.group('emaillogin', 'code', errors) }}">
 					<label class="col-sm-1 control-label" for="startupapi-{{slug}}-code">Code</label>
 					<div class="col-sm-8 col-md-7 col-lg-5">
 						<input class="form-control" id="startupapi-{{slug}}-code" name="code" type="text"{% if code %} value="{{code}}"{% endif %}/>
