--- a/themes/classic/templates/modules/email/edit_user_form.html.twig
+++ b/themes/classic/templates/modules/email/edit_user_form.html.twig
@@ -1,15 +1,16 @@
+{% import 'error_messages.html.twig' as ERR %}
 <form class="form-horizontal" action="{{action}}" method="POST">
 	<fieldset>
 		<legend>Update your name and email</legend>
 
-		<div class="control-group{% if 'name' in errors|keys %} error" title="{{ errors['name']|join("\n")}}{% endif %}">
+		<div class="control-group{{ ERR.group(slug, 'name', errors) }}">
 			<label class="control-label" for="startupapi-{{slug}}-edit-name">Name</label>
 			<div class="controls">
 				<input class="input-xlarge" id="startupapi-{{slug}}-edit-name" name="name" type="text" value="{% if 'name' in data|keys %}{{ data.name }}{% else %}{{AUTH.current_user.name}}{% endif %}"/>
 			</div>
 		</div>
 
-		<div class="control-group{% if 'email' in errors|keys %} error" title="{{ errors['email']|join("\n")}} ?>{% endif %}">
+		<div class="control-group{{ ERR.group(slug, 'email', errors) }}">
 			<label class="control-label" for="startupapi-{{slug}}-edit-email">Email</label>
 			<div class="controls">
 				<input class="input-xlarge" id="startupapi-{{slug}}-edit-email" name="email" type="email" value="{% if 'email' in data|keys %}{{ data.email }}{% else %}{{AUTH.current_user.email}}{% endif %}"/>
