Added success messages to edit user form and usernamepass module specifically.

--- a/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
+++ b/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
@@ -1,4 +1,11 @@
 {% import 'error_messages.html.twig' as ERR %}
+
+<script>
+	STARTUPAPI.showMessages({
+		"saved": { 'class': 'success', 'text': 'Password updated'},
+	});
+</script>
+
 <div class="page-header">
 	<h1>Update your username and password</h1>
 </div>
